feat: add getCountry & deleteCountry
